--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,21 @@
+@font-face {
+	font-family: "PT Sans";
+	font-weight: 400;
+	font-style: normal;
+	src: local("PT Sans"),
+		url("../fonts/PTSans.woff2") format("woff2"),
+		url("../fonts/PTSans.woff") format("woff");
+} 
+
+@font-face {
+	font-family: "PT Sans";
+	font-weight: 700;
+	font-style: normal;
+	src: local("PT Sans-Bold"),
+		url("../fonts/PTSans-Bold.woff2") format("woff2"),
+		url("../fonts/PTSans-Bold.woff") format("woff");
+}
+
 :root {
   --basic-white: #ffffff;
   --basic-black: #000000;
@@ -21,33 +39,20 @@
   --transparent-white: rgba(255, 255, 255, 0.9);
 }
 
-.page {
-}
-
 .page-body {
   min-width: 1200px;
-  margin: 0;
-  padding: 0;
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 24px;
   font-weight: 400;
-  color: var(--basic-black);
-  text-transform: uppercase;
+  color: var(--special-text-black);
   background-color: var(--basic-white);
-  text-align: center;
-}
-
-.main-header {
-
-}
-
-.main-nav {
-
 }
 
 .main-nav-list {
 	list-style: none;
+	text-transform: uppercase;
+	text-align: center;
 }
 
 .logo {
@@ -57,8 +62,14 @@
 
 .subtitle {
 	font-size: 21px;
-	text-transform: uppercase; /*повторил это свойство, т.к. в button внизу оно почему-то не наследовалось */
+	text-transform: uppercase;
+	font-weight: bold;
+	text-align: center;
 }
+
+.text-uppercase { 
+	text-transform: uppercase; 
+	}
 
 .text-tall {
 	line-height: 26px;
@@ -72,6 +83,10 @@
 	color: var(--basic-white);
 }
 
+.text-black {
+	color: var(--basic-black);
+}
+
 .text-bold {
 	font-weight: bold;
 }
@@ -81,56 +96,26 @@
 	color: var(--basic-black);
 }
 
-.main-header-logo {
-
-}
-
-.sedona-landscape-img {
-	background-color: var(--basic-blue);
-}
-
-.sedona-lanscape-cut {
+.header-bg-cut {
 	background-image: url("../img/sedona-lanscape-cut.svg");
 }
 
-.welcome-img {
+.img-bg-white {
 	background-color: var(--basic-white);
 }
 
-.gorgeous-img {
-	background-color: var(--basic-white);
-}
-
-.sedona-title-img {
-	background-color: var(--basic-white);
-}
-
-.feature-1 {
-}
-
-.feature-item-blue-bg {
+.img-bg-blue {
 	background-color: var(--basic-blue);
 }
 
-.life-in-sedona-img {
+.img-bg-hover-blue {
 	background-color: var(--hover-blue);
-}
-
-.devils-bridge-img {
-	background-color: var(--hover-blue);
-}
-
-.feature-3-4-5 {
-	background-color: var(--feature-grey);
-}
-
-.call-to-action {
-
 }
 
 .subtitle-call-to-action {
 	font-size: 30px;
 	line-height: 24px;
+	color: var(--basic-black);
 }
 
 .button-brown {
@@ -149,7 +134,8 @@
 }
 
 .main-footer {
-	background-color: var(--transparent-white);/*Не уверен, нужно ли было выносить полупрозрасный в отдельный цвет  */
+	background-color: var(--transparent-white);/*Не уверен, нужно ли было выносить полупрозрачный в отдельный цвет  */
+	text-align: center;
 }
 
 .social-button {
@@ -163,7 +149,6 @@
 .social-button:active {
 	background-color: var(--active-blue);
 }
-
 
 .twitter-button {
 	background-image: url("../img/twitter.png");/* и здесь непонял почему не работает */
@@ -185,10 +170,6 @@
 	visibility: hidden;
 }
 
-.link-social {
-
-}
-
 .main-nav-list .link:hover {
 	color: var(--hover-blue);
 }
@@ -198,4 +179,16 @@
 	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	opacity: 0.3;
 	-webkit-text-stroke: 1px black;
+}
+
+.feature-list {
+	background-color: var(--feature-grey);
+	text-align: center;
+
+}
+
+.header-images,
+.call-to-action,
+.feature {
+	text-align: center;
 }
