--- a/css/main.css
+++ b/css/main.css
@@ -188,11 +188,11 @@
 	visibility: hidden;
 }
 
-.main-nav-list .link:hover {
+.main-nav-list .link-unmarked:hover {
 	color: var(--hover-blue);
 }
 
-.main-nav-list .link:active {
+.main-nav-list .link-unmarked:active {
 	color: var(--basic-black);
 	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	opacity: 0.3;
@@ -292,5 +292,4 @@
 
 .rating-star {
 	background-image: url("../img/rating-star.svg");
-	background-size: 19px 17px;
 }
