--- a/css/main.css
+++ b/css/main.css
@@ -88,28 +88,11 @@
 	color: var(--basic-white);
 }
 
-.text-uppercase { 
-	text-transform: uppercase; 
-	}
-
-.text-tall {
+.subtitle-search {
 	line-height: 26px;
-}
-
-.text-low {
-	line-height: 21px;
-}
-
-.text-white {
-	color: var(--basic-white);
-}
-
-.text-black {
-	color: var(--basic-black);
-}
-
-.text-bold {
+	font-size: 21px;
 	font-weight: bold;
+	text-transform: uppercase;
 }
 
 .link-unmarked {
@@ -142,6 +125,10 @@
 
 .button-blue {
 	background-color: var(--basic-blue);
+	color: var(--basic-white);
+	text-transform: uppercase;
+	font-weight: bold;
+	line-height: 21px;
 }
 
 .button-blue:hover {
@@ -150,6 +137,14 @@
 
 .button-blue:active {
 	background-color: var(--active-blue);
+}
+
+.button-brown-little {
+	font-weight: bold;
+	background-color: var(--basic-brown);
+	color: var(--basic-white);
+	text-transform: uppercase;
+	line-height: 21px;
 }
 
 .button-brown-big {
@@ -161,10 +156,12 @@
 	line-height: 26px;
 }
 
-.button-brown:hover {
+.button-brown:hover,
+.button-brown-little:hover {
 	background-color: var(--hover-brown);
 }
-.button-brown:active {
+.button-brown:active,
+.button-brown-little:active {
 	background-color: var(--active-brown);
 }
 
@@ -254,10 +251,15 @@
 
 .filter-title {
 	font-size: 16px;
+	font-weight: bold;
 }
 
 .offer-filter {
 	background: url("../img/filter-background.jpg") no-repeat;
+	background-color: var(--basic-blue);
+	color: var(--basic-white);
+	line-height: 21px;
+	text-transform: uppercase;
 }
 
 .search-results {
@@ -267,30 +269,34 @@
 	line-height: 18px;
 	text-transform: uppercase;
 }
-
-.button-filter-price {
-	color: var(--basic-blue);
-}
-
-.button-filter-type {
-	color: var(--basic-black);
-	opacity: 0.3;
-}
-
+.button-filter-price,
+.button-filter-type,
 .button-filter-rate {
 	color: var(--basic-black);
-	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	opacity: 0.3;
-	-webkit-text-stroke: 1px black;
+}
+
+.button-filter-price:hover,
+.button-filter-type:hover,
+.button-filter-rate:hover {
+	color: var(--basic-blue);
+	opacity: 1;
+}
+
+.button-filter-price:active,
+.button-filter-type:active,
+.button-filter-rate:active {
+	color: var(--basic-black);
 }
 
 .button-text-underline {
 	border-bottom: 1px dotted var(--basic-blue);
+	line-height: 18px;
 }
 
-.button-filter-rate:hover {
-	color: var(--basic-blue);
-	opacity: 1;
+.button-text-underline:active,
+.button-text-underline:focus {
+	border-bottom: 0px dotted var(--basic-blue);
 }
 
 .button-up:hover {
@@ -313,6 +319,8 @@
 	text-align: left;
 	border-top: 1px solid var(--focus-border-grey);
 	border-bottom: 1px solid var(--focus-border-grey);
+	line-height: 21px;
+	text-transform: uppercase;
 }
 
 .results-item .subtitle:hover {
@@ -339,4 +347,12 @@
 .copyright {
 	font-size: 14px;
 	font-weight: normal;
+}
+
+.result-title {
+	font-size: 21px;
+	font-weight: bold;
+	line-height: 26px;
+	text-transform: uppercase;
+	color: var(--basic-black);
 }
