--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,8 @@
 
 .page-body {
   min-width: 1200px;
+  padding: 0;
+  margin: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 24px;
